1.5.2
	+ Zentyal rebrand
1.5.1
	+ Adds integration between ebox-webserver virtual hosts and
	  ebox-webmail.
1.5
	+ Support for postgresql 8.4 (lucid)
	+ Removed unsuported character from autogenerated key. Thanks to
	  servisoft for pointing this out
1.3.15
	+ managesieve plugin configuration file stored in /etc to shield
	  it from package upgrades
1.3.14
	+ Bugfix: assure cache is disabled when using a localhost
	  server. This is neccesary or otherwise we will be bitten for
	  roundcube check new email bug
1.3.13
	+ Change menu name to keep folder open
	+ Added support for 'markasjunk' plugin
	+ Hidden external server configuration until it works for more cases
	+ Bugfix: added disableCache option to operation mode field
1.3.12
	+ Fix titles and headers
1.3.10
	+ First release