@@ -1,3 +1,5 @@
+HEAD
+	+ Changed to alias setup instead of symlink
 1.5.2
 	+ Zentyal rebrand
 1.5.1
